syntax = "proto3";

package nexus;

service NexusService {
  rpc GetProof (ProofRequest) returns (ProofResponse);
  rpc VerifyState (VerifyStateRequest) returns (VerifyStateResponse);
  rpc GetStatus (StatusRequest) returns (StatusResponse);
  rpc GetServices (ServicesRequest) returns (ServicesResponse);
}

message ProofRequest {
  string key = 1;
}

message ProofResponse {
  string hash = 1;
  string proof = 2;
}

message VerifyStateRequest {
  string state_root = 1;
}

message VerifyStateResponse {
  bool valid = 1;
}

message StatusRequest {}

message StatusResponse {
  string state_root = 1;
  uint64 processed_height = 2;
  bool safety_mode = 3;
  uint64 drift = 4;
}

message ServicesRequest {}

message ServicesResponse {
  repeated ServiceStatus services = 1;
}

message ServiceStatus {
  string service_name = 1;
  string status = 2;
  string version = 3;
}
